--- a/test02.html
+++ b/test02.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Hey, Lingzhi just started to coding!</h1>
 	<p>My name is Lingzhi. I am the co-founder of <b>Sunflower AI</b>.<br>
-	This is how sunflower AI works.</p>
+	This is how sunflower AI works. Let's have a check.</p>
 	<a href="https://sunflowerai.io" target="_blank" title="Let's visit Sunflower AI!" >Sunflower AI Homepage</a>
 	<img src="https://cdn.prod.website-files.com/6583bfd3cfdfeaa148b29214/6761e7d4283ef20091dca94a_Lingzhi%20design.jpg">
 </body>
