--- a/test02.html
+++ b/test02.html
@@ -9,6 +9,10 @@
 	<h1>Hey, Lingzhi just started to coding!</h1>
 	<p>My name is Lingzhi. I am the co-founder of <b>Sunflower AI</b>.<br>
 	This is how sunflower AI works. Let's have a check. Why the URL is not working? <br><b>Great, now I can see my new site.</b></p>
+	<h2>How do I code</h2>
+	<p>Step1: Write code with Sublime.text</p>
+	<p>Step2: Commit to main through Github desktop</p>
+	<p>Step3: "Fetch to Origin" on Github desktop to publish changes.</p>
 	<a href="https://sunflowerai.io" target="_blank" title="Let's visit Sunflower AI!" >Sunflower AI Homepage</a>
 	<img src="https://cdn.prod.website-files.com/6583bfd3cfdfeaa148b29214/6761e7d4283ef20091dca94a_Lingzhi%20design.jpg">
 </body>
