--- a/test02.html
+++ b/test02.html
@@ -6,10 +6,10 @@
 	<title>Lingzhi starts coding-day1</title>
 </head>
 <body>
-	<h1>Hey, Lingzhi just started to coding!</h1>
+	<h1 style="color: #FFBF00;"> Hey, Lingzhi just started to coding!</h1>
 	<p>My name is Lingzhi. I am the co-founder of <b>Sunflower AI</b>.<br>
-	This is how sunflower AI works. Let's have a check. Why the URL is not working? <br><b>Great, now I can see my new site.</b></p>
-	<h2>How do I code</h2>
+	This is how sunflower AI works.  <br><b>Great, now I can see my new site.</b></p>
+	<h2 style="color: #F8C471;">How do I code</h2>
 	<p>Step1: Write code with Sublime.text</p>
 	<p>Step2: Commit to main through Github desktop</p>
 	<p>Step3: "Fetch to Origin" on Github desktop to publish changes.</p>
