--- a/test02.html
+++ b/test02.html
@@ -13,7 +13,7 @@
 	<p>Step1: Write code with Sublime.text</p>
 	<p>Step2: Commit to main through Github desktop</p>
 	<p>Step3: "Fetch to Origin" on Github desktop to publish changes.</p>
-	<a href="https://sunflowerai.io" target="_blank" title="Let's visit Sunflower AI!" >Sunflower AI Homepage</a>
-	<img src="https://cdn.prod.website-files.com/6583bfd3cfdfeaa148b29214/6761e7d4283ef20091dca94a_Lingzhi%20design.jpg" style="width: 300px; height: auto;" alt="How does Sunflower AI works">
+	<a href="https://sunflowerai.io" target="_blank" title="Let's visit Sunflower AI!" >Sunflower AI Homepage</a><br>
+	<img src="https://cdn.prod.website-files.com/6583bfd3cfdfeaa148b29214/6761e7d4283ef20091dca94a_Lingzhi%20design.jpg" style="width: 50%; height: auto;" alt="How does Sunflower AI works">
 </body>
 </html>
