--- a/test02.html
+++ b/test02.html
@@ -4,16 +4,23 @@
 <head>
 	
 	<title>Lingzhi starts coding-day1</title>
+	<style type="text/css">
+		h1 {
+			color: salmon;
+		}
+	</style>
 </head>
 <body>
-	<h1 style="color: #FFBF00;"> Hey, Lingzhi just started to coding!</h1>
+	<h1> Hey, Lingzhi just started to coding!</h1>
+	<h2 style="color: salmon;">Intro</h2>
 	<p>My name is Lingzhi. I am the co-founder of <b>Sunflower AI</b>.<br>
 	This is how sunflower AI works.  <br><b>Great, now I can see my new site.</b></p>
-	<h2 style="color: #F8C471;">How do I code</h2>
+	<h2 style="color: salmon;">How do I code</h2>
 	<p>Step1: Write code with Sublime.text</p>
 	<p>Step2: Commit to main through Github desktop</p>
 	<p>Step3: "Fetch to Origin" on Github desktop to publish changes.</p>
 	<a href="https://sunflowerai.io" target="_blank" title="Let's visit Sunflower AI!" >Sunflower AI Homepage</a><br>
 	<img src="https://cdn.prod.website-files.com/6583bfd3cfdfeaa148b29214/6761e7d4283ef20091dca94a_Lingzhi%20design.jpg" style="width: 50%; height: auto;" alt="How does Sunflower AI works">
+	<h1>testing heading 1</h1>
 </body>
 </html>
