--- a/test02.html
+++ b/test02.html
@@ -8,14 +8,17 @@
 		h1 {
 			color: salmon;
 		}
+		h2 {
+			color: darksalmon;
+		}
 	</style>
 </head>
 <body>
-	<h1> Hey, Lingzhi just started to coding!</h1>
-	<h2 style="color: salmon;">Intro</h2>
+	<h1> Hey, Lingzhi just started coding!</h1>
+	<h2>Intro</h2>
 	<p>My name is Lingzhi. I am the co-founder of <b>Sunflower AI</b>.<br>
 	This is how sunflower AI works.  <br><b>Great, now I can see my new site.</b></p>
-	<h2 style="color: salmon;">How do I code</h2>
+	<h2>How do I code</h2>
 	<p>Step1: Write code with Sublime.text</p>
 	<p>Step2: Commit to main through Github desktop</p>
 	<p>Step3: "Fetch to Origin" on Github desktop to publish changes.</p>
