--- a/test02.html
+++ b/test02.html
@@ -11,19 +11,23 @@
 		h2 {
 			color: darksalmon;
 		}
+		.uppercase{
+			text-transform: uppercase;
+		}
 	</style>
 </head>
 <body>
 	<h1> Hey, Lingzhi just started coding!</h1>
-	<h2>Intro</h2>
+	<h2 class="uppercase">Intro</h2>
 	<p>My name is Lingzhi. I am the co-founder of <b>Sunflower AI</b>.<br>
 	This is how sunflower AI works.  <br><b>Great, now I can see my new site.</b></p>
-	<h2>How do I code</h2>
+	<h2 class="uppercase">How do I code</h2>
 	<p>Step1: Write code with Sublime.text</p>
 	<p>Step2: Commit to main through Github desktop</p>
 	<p>Step3: "Fetch to Origin" on Github desktop to publish changes.</p>
 	<a href="https://sunflowerai.io" target="_blank" title="Let's visit Sunflower AI!" >Sunflower AI Homepage</a><br>
 	<img src="https://cdn.prod.website-files.com/6583bfd3cfdfeaa148b29214/6761e7d4283ef20091dca94a_Lingzhi%20design.jpg" style="width: 50%; height: auto;" alt="How does Sunflower AI works">
-	<h1>testing heading 1</h1>
+	<h2 class="uppercase">What I learnt today</h2>
+
 </body>
 </html>
