--- a/test02.html
+++ b/test02.html
@@ -4,17 +4,7 @@
 <head>
 	
 	<title>Lingzhi starts coding-day1</title>
-	<style type="text/css">
-		h1 {
-			color: salmon;
-		}
-		h2 {
-			color: darksalmon;
-		}
-		.uppercase{
-			text-transform: uppercase;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="CSS/test.css">
 </head>
 <body>
 	<h1> Hey, Lingzhi just started coding!</h1>
