--- a/index.html
+++ b/index.html
@@ -8,23 +8,34 @@
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/lingzhi.jpeg" style="width: 20%; height: auto;">
-		<h1>Lingzhi Kang's Blog</h1>
+		<!-- <img src="img/lingzhi.jpeg" style="width: 20%; height: auto;"> -->
+		<h1>Lingzhi's coding journey</h1>
 	</header>
 
 	<!-- main element -->
 	<main>
 		<h2>About Lingzhi</h2>
-		<p>I am a PhD in biomedical engineering. I am also the co-founder of sunflower ai, which is a live translation AI agent. </p>
-		<img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
-		<img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
-		<img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
-		<p>Lingzhi hobby</p>
-		<h2>What I enjoy</h2>
+		<p>I am a PhD in biomedical engineering. 
+			<br>I am also the co-founder of sunflower ai, which is a live translation AI agent. 
+			<br>I am learning coding to help our product building. </p>
+		<!-- <img src="img/lingzhi.jpeg" style="width: 10%; height: auto;"> -->
+		<!-- <img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
+		<img src="img/lingzhi.jpeg" style="width: 10%; height: auto;"> -->
+		
+		<h2>My learning plan</h2>
 		<ol>
-			<li>I love coding.</li>
-			<li>I love crochet.</li>
+			<li>Understand what is HTML, CSS, and JavaScript.</li>
+			<li>Finish some beginner projects.</li>
+			<li>Learn React basics.</li>
+			<li>Learn Next.js basics.</li>
 			<li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li>
+			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
+		</ol>
+
+		<h2>Course I am taking</h2>
+		<ol>
+			<li><a href="https://skl.sh/4azwme0">Hand-Code Your First Website: HTML + CSS Basics</a></li>
+		
 			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
 		</ol>
 
@@ -34,8 +45,10 @@
 		<p>I am active on LinkedIn (startups), Github (coding), Instagram and Youtube (my crochet tutorials and designs) Click on links below to read more:</p>
 		<ul>
 			
-			<li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li>
-					<p>This is a test!</p>
+			<li>My startup <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li>
+			<li>LinkedIn <a href="www.linkedin.com/in/lingzhikang"></a>.</li>
+			<li>Youtube <a href="https://www.youtube.com/@lingzhihandmade"></a>.</li>
+					
 						
 		</ul>
 	</main>
