--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
 	<!-- header element -->
 	<header>
-		<!-- <img src="img/lingzhi.jpeg" style="width: 20%; height: auto;"> -->
 		<h1>Lingzhi's coding journey</h1>
+		<img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
 	</header>
 
 	<!-- main element -->
 	<main>
 		<h2>About Lingzhi</h2>
 		<p>I am a PhD in biomedical engineering. 
-			<br>I am also the co-founder of sunflower ai, which is a live translation AI agent. 
+			<br>I am also the co-founder of <a href="https://sunflowerai.io">SunflowerAI.io</a>, which is a live translation AI agent. 
 			<br>I am learning coding to help our product building. </p>
 		<!-- <img src="img/lingzhi.jpeg" style="width: 10%; height: auto;"> -->
 		<!-- <img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
@@ -28,13 +28,13 @@
 			<li>Finish some beginner projects.</li>
 			<li>Learn React basics.</li>
 			<li>Learn Next.js basics.</li>
-			<li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li>
+			<!-- <li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li> -->
 			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
 		</ol>
 
-		<h2>Course I am taking</h2>
+		<h2>Courses I am taking</h2>
 		<ol>
-			<li><a href="https://skl.sh/4azwme0">Hand-Code Your First Website: HTML + CSS Basics</a></li>
+			<li><a href="https://skl.sh/4azwme0">Hand-Code Your First Website: HTML + CSS Basics</a> at Skillshare.</li>
 		
 			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
 		</ol>
@@ -45,9 +45,9 @@
 		<p>I am active on LinkedIn (startups), Github (coding), Instagram and Youtube (my crochet tutorials and designs) Click on links below to read more:</p>
 		<ul>
 			
-			<li>My startup <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li>
-			<li>LinkedIn <a href="www.linkedin.com/in/lingzhikang"></a>.</li>
-			<li>Youtube <a href="https://www.youtube.com/@lingzhihandmade"></a>.</li>
+			<li>My startup: <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li>
+			<li>Startup updates:<a href="www.linkedin.com/in/lingzhikang">LinkedIn</a>.</li>
+			<li>My hobby:Crochet tutorials and designs: <a href="https://www.youtube.com/@lingzhihandmade">Youtube</a>.</li>
 					
 						
 		</ul>
@@ -55,7 +55,7 @@
 
 	<!-- Footer elements -->
 	<footer>
-		<p>This is the footer!</p>
+		<p>This is my coding journey!</p>
 	</footer>
 
 </body>
