--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="img/lingzhi.jpeg">
 	<title>Lingzhi Kang</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="CSS/lingzhi.css">
 </head>
 <body>
 	<!-- header element -->
 	<header>
-		<h1>Lingzhi's coding journey</h1>
-		<img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
+		<img src="img/lingzhi.jpeg" style="width: 20%; height: auto;">
+		<h1>Coding from Zero to Hero!</h1>
+		<h2>Lingzhi's coding journey</h2>
 	</header>
 
 	<!-- main element -->
@@ -17,7 +23,7 @@
 		<h2>About Lingzhi</h2>
 		<p>I am a PhD in biomedical engineering. 
 			<br>I am also the co-founder of <a href="https://sunflowerai.io">SunflowerAI.io</a>, which is a live translation AI agent. 
-			<br>I am learning coding to help our product building. </p>
+			<br>I am learning coding to better understand our product building. </p>
 		<!-- <img src="img/lingzhi.jpeg" style="width: 10%; height: auto;"> -->
 		<!-- <img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
 		<img src="img/lingzhi.jpeg" style="width: 10%; height: auto;"> -->
@@ -55,7 +61,7 @@
 
 	<!-- Footer elements -->
 	<footer>
-		<p>This is my coding journey!</p>
+		<p>Let's enjoy the coding journey together! &copy; Lingzhi</p>
 	</footer>
 
 </body>
