update projects link

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 		<!-- <img src="img/lingzhi.jpeg" style="width: 10%; height: auto;">
 		<img src="img/lingzhi.jpeg" style="width: 10%; height: auto;"> -->
 		
-		<h2>My learning plan</h2>
+		<h2>My learning plan: coding while learning</h2>
+		<h3>Beginner Projects I am working on:</h3>
 		<ol>
-			<li>Understand what is HTML, CSS, and JavaScript.</li>
-			<li>Finish some beginner projects.</li>
-			<li>Learn React basics.</li>
-			<li>Learn Next.js basics.</li>
+			<li><a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
+			<li>Weather app</li>
+			<li><a href="https://live-caption-app.vercel.app/">Live captioning app</a></li>
+			<li></li>
 			<!-- <li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li> -->
 			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
 		</ol>
@@ -41,6 +42,7 @@
 		<h2>Courses I am taking</h2>
 		<ol>
 			<li><a href="https://skl.sh/4azwme0">Hand-Code Your First Website: HTML + CSS Basics</a> at Skillshare.</li>
+			<li><a href="https://www.coursera.org/professional-certificates/meta-front-end-developer">Meta Front-End Developer Professional Certificate</a> at Coursera.</li>
 		
 			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
 		</ol>
