deleted recalc; edit hero section

--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
 </head>
 <body>
 	<!-- header element -->
-	<header>
+	<!-- <header>
 		<img src="img/lingzhi.jpeg" style="width: 20%; height: auto;">
 		<h1>Coding from Zero to Hero!</h1>
 		<h2>Lingzhi's coding journey</h2>
+	</header> -->
+
+	<header class="hero">
+		<div class="hero-left">
+			<img src="img/lingzhi.jpeg" alt="Lingzhi" class="hero-image">
+		</div>
+		<div class="hero-right">
+			<h1>Coding from Zero to Hero!</h1>
+			<h2>Lingzhi's coding journey</h2>
+		</div>
 	</header>
+	
 
 	<!-- main element -->
 	<main>
@@ -34,7 +45,7 @@
 			<li><a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
 			<li>Weather app</li>
 			<li><a href="https://live-caption-app.vercel.app/">Live captioning app</a></li>
-			<li></li>
+			
 			<!-- <li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li> -->
 			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
 		</ol>
