--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<h3>Beginner Projects I am working on:</h3>
 		<ol>
 			<li><a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
-			<li><a href="https://myweatherapp-five-delta.vercel.app/"></a>Weather app</a></li>
+			<li><a href="https://myweatherapp-five-delta.vercel.app/">Weather app</a></li>
 			<li><a href="https://live-caption-app.vercel.app/">Live captioning app</a></li>
 			
 			<!-- <li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li> -->
