updated project link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 		<ol>
 			<li><a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
 			<li><a href="https://myweatherapp-five-delta.vercel.app/">Weather app</a></li>
-			<li><a href="https://live-caption-app.vercel.app/">Live captioning app</a></li>
+			<li><a href="https://live-caption-app.vercel.app/">Live captioning app-React App-No Signup</a></li>
+			<li><a href="https://expense-tracker-nextjs-blush.vercel.app/">Expense Tracker-Next.js Full Stack App</a></li>
 			
 			<!-- <li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li> -->
 			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
