--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
 		
 		<h2>My learning plan: coding while learning</h2>
 		<h3>Beginner Projects I am working on:</h3>
+		<p>*from most recent to oldest</p>
 		<ol>
-			<li><a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
-			<li><a href="https://myweatherapp-five-delta.vercel.app/">Weather app</a></li>
-			<li><a href="https://live-caption-app.vercel.app/">Live captioning app-React App-No Signup</a></li>
-			<li><a href="https://expense-tracker-nextjs-blush.vercel.app/">Expense Tracker-Next.js Full Stack App</a></li>
+			<li>Expense Tracker-Next.js Full Stack App:<a href="https://expense-tracker-nextjs-blush.vercel.app/">Expense Tracker</a></li>
+			<li>Live Captioning App-React-Frontend + Backend:<a href="https://live-caption-next-app.vercel.app/">Live Captioning Full Stack</a></li>
+			<li>Live Captioning App-React-Frontend only:<a href="https://live-caption-app.vercel.app/">Live captioning Frontend</a></li>
+			<li>To-do-list app:<a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
+			<li>Static Weather App-React:<a href="https://myweatherapp-five-delta.vercel.app/">Weather app</a></li>
+			
+			
 			
 			<!-- <li>I love coding <a href="https://sunflowerai.io">SunflowerAI.io</a>.</li> -->
 			<!-- <li>I am a tech startup founder at <a href="https://sunflowerai.io">SunflowerAI.io</li> -->
