--- a/index.html
+++ b/index.html
@@ -43,11 +43,17 @@
 		<h3>Beginner Projects I am working on:</h3>
 		<p>*from most recent to oldest</p>
 		<ol>
-			<li>Expense Tracker-Next.js Full Stack App:<a href="https://expense-tracker-nextjs-blush.vercel.app/">Expense Tracker</a></li>
-			<li>Live Captioning App-React-Frontend + Backend:<a href="https://live-caption-next-app.vercel.app/">Live Captioning Full Stack</a></li>
-			<li>Live Captioning App-React-Frontend only:<a href="https://live-caption-app.vercel.app/">Live captioning Frontend</a></li>
-			<li>To-do-list app:<a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
-			<li>Static Weather App-React:<a href="https://myweatherapp-five-delta.vercel.app/">Weather app</a></li>
+			<li><b>Expense Tracker-Next.js Full Stack App:</b><br> Clerk Authentication + Prisma ORM + Neon + Next.js
+				<br><a href="https://expense-tracker-nextjs-blush.vercel.app/">Expense Tracker</a></li>
+			<li><b>Live Captioning App-React-Frontend + Backend:</b>
+				<br>Transcript saved to local browser storage;
+				<br><a href="https://live-caption-next-app.vercel.app/">Live Captioning Full Stack</a></li>
+			<li><b>Live Captioning App-React-Frontend only:</b>
+				<br><a href="https://live-caption-app.vercel.app/">Live captioning Frontend</a></li>
+			<li><b>To-do-list app:</b>
+				<br><a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
+			<li><b>Static Weather App-React:</b>
+				<br><a href="https://myweatherapp-five-delta.vercel.app/">Weather app</a></li>
 			
 			
 			
