--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<li><b>Expense Tracker-Next.js Full Stack App:</b><br> Clerk Authentication + Prisma ORM + Neon + Next.js
 				<br><a href="https://expense-tracker-nextjs-blush.vercel.app/">Expense Tracker</a></li>
 			<li><b>Live Captioning App-React-Frontend + Backend:</b>
-				<br>Transcript saved to local browser storage;
+				<br>Web Speech API + Transcript saved to local browser;
 				<br><a href="https://live-caption-next-app.vercel.app/">Live Captioning Full Stack</a></li>
 			<li><b>Live Captioning App-React-Frontend only:</b>
 				<br><a href="https://live-caption-app.vercel.app/">Live captioning Frontend</a></li>
