--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 		<ol>
 			<li><b>Expense Tracker-Next.js Full Stack App:</b><br> Clerk Authentication + Prisma ORM + Neon + Next.js
 				<br><a href="https://expense-tracker-nextjs-blush.vercel.app/">Expense Tracker</a></li>
-			<li><b>Live Captioning App-React-Frontend + Backend:</b>
+			<li><b>Live Captioning App V2-05Feb2025-React-Frontend + Backend:</b>
 				<br>Web Speech API + Transcript saved to local browser;
 				<br><a href="https://live-caption-next-app.vercel.app/">Live Captioning Full Stack</a></li>
-			<li><b>Live Captioning App-React-Frontend only:</b>
+			<li><b>Live Captioning App V1-Jan2025-React-Frontend only:</b>
 				<br><a href="https://live-caption-app.vercel.app/">Live captioning Frontend</a></li>
 			<li><b>To-do-list app:</b>
 				<br><a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
