--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 				<br>Web Speech API + Transcript saved to local browser;
 				<br><a href="https://live-caption-next-app.vercel.app/">Live Captioning Full Stack</a></li>
 			<li><b>Live Captioning App V1-Jan2025-React-Frontend only:</b>
+				<br>Web Speech API;
 				<br><a href="https://live-caption-app.vercel.app/">Live captioning Frontend</a></li>
 			<li><b>To-do-list app:</b>
 				<br><a href="https://mytodolist-rho.vercel.app/">To-do-list app</a></li>
