--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 		<h3>Beginner Projects I am working on:</h3>
 		<p>*from most recent to oldest</p>
 		<ol>
+			<li><b>Live Captioning App V3-14Feb2025-React-Frontend + Backend:</b>
+				<br>Clerk Authentication + Web Speech API + Prisma ORM + Neon;
+				<br><a href="https://live-caption-full-app-v3.vercel.app/">Live Captioning Full App V3</a></li>
 			<li><b>Expense Tracker-Next.js Full Stack App:</b><br> Clerk Authentication + Prisma ORM + Neon + Next.js
 				<br><a href="https://expense-tracker-nextjs-blush.vercel.app/">Expense Tracker</a></li>
 			<li><b>Live Captioning App V2-05Feb2025-React-Frontend + Backend:</b>
